--- a/projetoDas/dasProject/templates/index.html
+++ b/projetoDas/dasProject/templates/index.html
@@ -43,49 +43,63 @@
 </div>
 
 <div class="row">
-  <div class="col-xs-offset-1 col-xs-10">
-    <h2>
-      Passo 1
-    </h2>
-    <h3>
-      Selecione as imagens que deseja organizar:
-    </h3>
-    <br/>
-    <br/>
-    <div class="row">
-      <div class="col-xs-offset-3">
-        <label>Processar Imagens (.jpg)</label>
-        <div class="row">
-          <form class="col-md-10" method="post" action="/dasProject/load_files/">
-              {% csrf_token %}
-              {{ form }}
-              </br>
-              <input class="col-md-2" id="submit" type="submit" value="Carregar" />
-          </form>
+  <div class="col-xs-offset-1">
+    <ul class="nav nav-tabs">
+      <li class="active">
+        <a data-toggle="tab" href="#imagem">Selecionar Imagem</a>
+      </li>
+      <li>
+        <a data-toggle="tab" href="#pasta">Selecionar Pasta</a>
+      </li>
+    </ul>
+
+    <div class="tab-content">
+      <div id="imagem" class="tab-pane fade in active">
+        <h3>Selecionar Imagens</h3>
+        </br>
+        <div class="col-xs-offset-1 col-xs-10">
+          <div class="row">
+            <div class="col-xs-offset-1">
+              <div class="row">
+                <form class="col-xs-10" method="post" action="/dasProject/load_files/">
+                    {% csrf_token %}
+                    <label>Imagens de Origem (.jpg)</label>
+                    {{ form }}
+                    <label>Pasta de Destino</label>
+                    <input type="text" class="form-control" class="col-xs-3" id="destiny_folder" name="destiny_folder">
+                    </br>
+                    <input class="btn btn-info" id="submit" type="submit" value="Processar" />
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div id="pasta" class="tab-pane fade">
+        <h3>Selecionar Pasta</h3>
+        </br>
+        <div class="col-xs-offset-1 col-xs-10">
+          <div class="row">
+            <div class="col-xs-offset-1">
+              <div class="row">
+                <form method="post" action="/dasProject/load_folder/">
+                  {% csrf_token %}
+                  <label>Pasta de Origem (ex: /Users/Convidado/Images)</label>
+                  <input type="text" class="form-control" class="col-xs-3" id="folder_path" name="folder_path">
+                    <label>Pasta de Destino</label>
+                  <input type="text" class="form-control" class="col-xs-3" id="destiny_folder" name="destiny_folder">
+                  <br />
+                  <input class="btn btn-info" id="submit" type="submit" value="Processar" />
+                </form>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
-
-    <br/>
-    <br/>
-
-    <div class="row">
-      <div class="col-xs-offset-3">
-        <label>Processar Pasta (ex: /Users/Convidado/Images)</label>
-        <div class="row">
-          <form method="post" action="/dasProject/load_folder/">
-            {% csrf_token %}
-            <input class="col-md-3" id="folder_path" name="folder_path">
-            <br />
-            <br />
-            <input class="col-md-2" id="submit" type="submit" value="Carregar" />
-          </form>
-        </div>
-      </div>
-    </div>
-
   </div>
 </div>
+
 
 <hr>
 
@@ -101,7 +115,30 @@
 </html>  
 
 <script>
+  window.onload = $("#tab-image").click();
+
   $('form').on('submit', function(e){
          
    });
+
+  function openCity(evt, cityName) {
+    // Declare all variables
+    var i, tabcontent, tablinks;
+
+    // Get all elements with class="tabcontent" and hide them
+    tabcontent = document.getElementsByClassName("tabcontent");
+    for (i = 0; i < tabcontent.length; i++) {
+        tabcontent[i].style.display = "none";
+    }
+
+    // Get all elements with class="tablinks" and remove the class "active"
+    tablinks = document.getElementsByClassName("tablinks");
+    for (i = 0; i < tablinks.length; i++) {
+        tablinks[i].className = tablinks[i].className.replace(" active", "");
+    }
+
+    // Show the current tab, and add an "active" class to the link that opened the tab
+    document.getElementById(cityName).style.display = "block";
+    evt.currentTarget.className += " active";
+  }
 </script>                                 
