--- a/projetoDas/dasProject/templates/index.html
+++ b/projetoDas/dasProject/templates/index.html
@@ -21,12 +21,12 @@
   <div class="container">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbarCollapse">
-        <span class="sr-only">Toggle navigation</span>
+        <span class="sr-only">Menu</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Sistema de Organização de Fotos</a>
+      <a class="navbar-brand" href="#">Photos Processor</a>
     </div>
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="navbarCollapse">
@@ -38,7 +38,8 @@
 </nav>
 <div class="container">
   <div class="jumbotron">
-    <h1>Sistema de Organização de Fotos</h1>
+    <h1>Photos Processor</h1>
+    <h2>Organize e analise as suas fotos em um só lugar!
   </div>
 </div>
 
@@ -50,6 +51,9 @@
       </li>
       <li>
         <a data-toggle="tab" href="#pasta">Selecionar Pasta</a>
+      </li>
+      <li>
+        <a data-toggle="tab" href="#face">Detecção de Faces</a>
       </li>
     </ul>
 
@@ -94,6 +98,20 @@
               </div>
             </div>
           </div>
+        </div>
+      </div>
+      <div>
+        <div id="pasta" class="tab-pane fade">
+          <h3>Selecionar Pasta</h3>
+          <form action="{% url 'faceDetection' %}" class="form-inline" method="POST">
+            {% csrf_token %}
+            Inserir a URL:
+            <input type="text" name="Nome" size="40" /> 
+            <input type="submit" name="">
+          </form>
+          {% if show_image %}
+            <img src="{% static 'imagens/test_image_URL.png' %}" alt="#">
+          {% endif %}
         </div>
       </div>
     </div>
