Added tab to face recognition

--- a/projetoDas/dasProject/templates/index.html
+++ b/projetoDas/dasProject/templates/index.html
@@ -101,8 +101,8 @@
         </div>
       </div>
       <div>
-        <div id="pasta" class="tab-pane fade">
-          <h3>Selecionar Pasta</h3>
+        <div id="face" class="tab-pane fade">
+          <h3>Detecção Face</h3>
           <form action="{% url 'faceDetection' %}" class="form-inline" method="POST">
             {% csrf_token %}
             Inserir a URL:
